syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message SumRequest {
  int32 first_num = 1;
  int32 second_num = 2;
}

message PrimeNumberDecomposeRequest { int32 number = 1; }

message PrimeNumberDecomposeResponse { int32 result = 1; }

message SumResponse { int32 sum = 1; }

message ComputeAverageRequest { int32 number = 1; }
message ComputeAverageResponse { double result = 1; }

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};
  rpc PrimeNumberDecompose(PrimeNumberDecomposeRequest)
      returns (stream PrimeNumberDecomposeResponse) {};
  rpc ComputeAverage(stream ComputeAverageRequest)
      returns (ComputeAverageResponse) {};
}